Bug 60549 - Pictures not saved to .pptx
Summary: Pictures not saved to .pptx
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0 target:4.0.4
Keywords:
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2013-02-09 16:57 UTC by Dino Kovač
Modified: 2013-05-04 23:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
I am attaching a document which can be used to reproduce the issue. Just save the document as .pptx and reopen it. (42.11 KB, application/vnd.oasis.opendocument.presentation)
2013-02-09 16:57 UTC, Dino Kovač
Details
appears to 'fix' the problem; but of course I have no idea what I'm doing. (1.96 KB, patch)
2013-04-30 17:19 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dino Kovač 2013-02-09 16:57:28 UTC
Created attachment 74490 [details]
I am attaching a document which can be used to reproduce the issue. Just save the document as .pptx and reopen it.

Problem description: 
The picture is not saved to .pptx if it is inserted with the "Insert picture" button on the slide.

Steps to reproduce:
1. Create empty presentation
2. Change slide layout to "Title, Content"
3. Use the button on the slide to insert picture
4. Save as .pptx
5. Close Libreoffice and open the saved .pptx file

Current behavior:
The picture is missing.

Expected behavior:
The picture is there.

More information:
This works just fine when exporting to .ppt.
The problem is present on Ubuntu and OS X, I haven't checked Windows.
Comment 1 Jorendc 2013-02-10 15:19:45 UTC
Thanks for reporting!

I can reproduce this behavior using Linux Mint 14 x64 and LibreOffice 4.0.0.3 rc3. Therefore I mark this as NEW. I also can reproduce this behavior using LibreOffice 3.5.0 (oldest bibisectable version of LibreOffice using bibisect40 package). I can't find any duplicate for now, but I can't imagine there is no duplicate for this bug... I put this bug on my TODO list and discuss it with other QA members, this all before I place this one on a MAB (=most annoying bugs) list.

Kind regards,
Joren
Comment 2 Jorendc 2013-02-12 18:50:45 UTC
Still can't find any duplicates (Joel can't find any either). Therefore I place it on the MAB3.6 because this is a very serious problem... losing even an image in a presentation is very critical (and 'data loss').
Comment 3 Dino Kovač 2013-02-12 18:55:33 UTC
Great, I'm glad I could be of assistance.
Comment 4 Michael Meeks 2013-04-30 17:03:30 UTC
The culprit is the kind of shape:

Slide one has:

write shape: com.sun.star.presentation.GraphicObjectShape
unknown shape

While slide two has:

write shape: com.sun.star.drawing.GraphicObjectShape
write graphic object shape

which works just fine ;-) I guess there is some subtle distinction we're missing here.
Comment 5 Michael Meeks 2013-04-30 17:19:10 UTC
Created attachment 78659 [details]
appears to 'fix' the problem; but of course I have no idea what I'm doing.
Comment 6 Michael Meeks 2013-05-02 10:27:04 UTC
Pushed to master; Muthu (I hope) will push it to -4-0 for 4.0.4; not sure about 3-6 - if someone wants to back-port it there I guess it's fine too.

I fixed a number of other missing 'presentation' types of shape objects in the export there; OLE2 etc.

Thanks for the report !
Comment 7 Commit Notification 2013-05-02 10:30:38 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=73740b2f75558eef73bf102c7209a90aaf3e7c2e

fdo#60549 - pptx export presentation as well as draw shape objects.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-05-02 12:23:52 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d47ca56c8019d7112dbbc99853f9e081d04b93ff&h=libreoffice-4-0

fdo#60549 - pptx export presentation as well as draw shape objects.


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Wenqing Zhou 2013-05-04 22:17:58 UTC
Fixed on Mac. Version 4.0.4.0+ (Build ID: 19e60e1a0507e041bbbbd2bf639782e990f7a55)
TinderBox: MacOSX-Intel@27-OSX_10.7.0-gcc_4.2.1_llvm, Branch:libreoffice-4-0, Time: 2013-05-03_14:30:25

Tested on MBP 2011 model, OS: 10.7.5
Comment 10 Jorendc 2013-05-04 23:34:28 UTC
(In reply to comment #9)
Therefore I mark it as VERIFIED FIXED

Thanks Michael for killing this nasty one _o_!