fdo#60549 - pptx export presentation as well as draw shape objects.

Change-Id: Ibe6e0b9fa55bab7a7d02e55560c1db4c8ed84132